@@ -1,3 +1,7 @@
+2010-07-01  Pedro Alves  <pedro@codesourcery.com>
+
+	* gdb.base/help: Adjust expected output.
+
 2010-06-30  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.cp/namespace.exp (print C::OtherFileClass::cOtherFileClassVar)
